# copyright_report

./: .gitignore  Cargo.toml  Settings.toml
src/: azure_api_config.rs  main.rs  pull_requests.rs  settings.rs
