[package]
authors = ["barteklu"]
edition = "2021"
name = "copyright_report"
version = "0.1.0"

[dependencies]
hyper = {version = "0.14", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}

base64 = "0.13.0"
chrono = "0.4"
crossterm = "0.23.0"
toml = "0.5"
tui = "0.17.0"
